[gd_scene load_steps=52 format=3 uid="uid://domffvp4kxl8h"]

[ext_resource type="Script" uid="uid://c1q0srq3nbl5n" path="res://enemy.gd" id="1_qi2p4"]
[ext_resource type="Texture2D" uid="uid://djqffkiid83we" path="res://sprites/enemy/Pawn_Blue.png" id="2_iifgy"]
[ext_resource type="Texture2D" uid="uid://ddhn48jhksnrt" path="res://sprites/enemy/Dead.png" id="3_epg4t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("2_iifgy")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("2_iifgy")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("2_iifgy")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("2_iifgy")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("2_iifgy")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("2_iifgy")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fu1e"]
atlas = ExtResource("2_iifgy")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p80fi"]
atlas = ExtResource("2_iifgy")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju3h7"]
atlas = ExtResource("2_iifgy")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3p7n"]
atlas = ExtResource("2_iifgy")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ehh3"]
atlas = ExtResource("2_iifgy")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nwx4"]
atlas = ExtResource("2_iifgy")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("3_epg4t")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("3_epg4t")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("3_epg4t")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("3_epg4t")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("3_epg4t")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("3_epg4t")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u8i"]
atlas = ExtResource("3_epg4t")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_otto8"]
atlas = ExtResource("3_epg4t")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q82m"]
atlas = ExtResource("3_epg4t")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_epc7x"]
atlas = ExtResource("3_epg4t")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rgc"]
atlas = ExtResource("3_epg4t")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdav3"]
atlas = ExtResource("3_epg4t")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpbtr"]
atlas = ExtResource("3_epg4t")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdfx"]
atlas = ExtResource("3_epg4t")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("2_iifgy")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("2_iifgy")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("2_iifgy")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tv8x"]
atlas = ExtResource("2_iifgy")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnl6c"]
atlas = ExtResource("2_iifgy")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv0vf"]
atlas = ExtResource("2_iifgy")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qku5p"]
atlas = ExtResource("2_iifgy")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1fjw"]
atlas = ExtResource("2_iifgy")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5wqg"]
atlas = ExtResource("2_iifgy")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgro5"]
atlas = ExtResource("2_iifgy")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rq2"]
atlas = ExtResource("2_iifgy")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccdwq"]
atlas = ExtResource("2_iifgy")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgdh"]
atlas = ExtResource("2_iifgy")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wg26"]
atlas = ExtResource("2_iifgy")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qskgw"]
atlas = ExtResource("2_iifgy")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3onx"]
atlas = ExtResource("2_iifgy")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o707m"]
atlas = ExtResource("2_iifgy")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_difxq"]
atlas = ExtResource("2_iifgy")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_5tv8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fu1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p80fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju3h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3p7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ehh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nwx4")
}],
"loop": true,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otto8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q82m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7rgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdav3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpbtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdfx")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tv8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnl6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv0vf")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qku5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1fjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5wqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgro5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18rq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccdwq")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wg26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qskgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3onx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o707m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_difxq")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lv0vf"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qi2p4"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_iifgy"]
radius = 561.393

[node name="enemy" type="CharacterBody2D"]
position = Vector2(0, 4)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_qi2p4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.984314, 0.886275, 1)
position = Vector2(0, 1)
scale = Vector2(0.410156, 0.431877)
sprite_frames = SubResource("SpriteFrames_5tv8x")
animation = &"attack2"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -5)
shape = SubResource("CircleShape2D_lv0vf")

[node name="Take_dmg_cooldown" type="Timer" parent="."]

[node name="death_timer" type="Timer" parent="."]
wait_time = 1.4
one_shot = true

[node name="attack_cooldown" type="Timer" parent="."]

[node name="hurt_timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="enemy_hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
visible = false
position = Vector2(3, -7)
shape = SubResource("CircleShape2D_qi2p4")

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_iifgy")

[connection signal="timeout" from="Take_dmg_cooldown" to="." method="_on_take_dmg_cooldown_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="hurt_timer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
